# cpp_refactor

./: .conan  .gitignore  .launch  .link  .run  CMakeLists.txt  README.md  conanfile.py  install.sh
config/: config.ini
src/: main.cpp  main.hpp
src/depth_calculation/: depth  depth_map_processing.cpp  depth_map_processing.hpp
src/input_calibration/: input_calibration.cpp  input_calibration.hpp  ycalib
src/observer/: distributor.hpp  observer.hpp
src/parsers/: central_parser.cpp  central_parser.hpp
src/path_planning/: path_plannig.cpp  path_planning.hpp
src/stereo_calibration/: stereo_calibration.cpp
src/stream/: stream.cpp  stream.hpp  stream_parser.cpp  stream_parser.hpp
